webapp/css/mapTest.css
#map{
  margin-top: 50px;
  margin-bottom: 50px;
}

#searchDiv{
    z-index: 2;
    margin-top: 50px
}

#mainSearchBtn{
    background-color: white;
    border: 1px solid;
    z-index: 2;
    border-color: lightgray;
}

#custom-search-input{
    padding: 10px;
    border-radius: 6px;
    background-color: yellow;
    z-index: 2;
}

#custom-search-input input{
    border: 0;
    box-shadow: none;
}

#custom-search-input button{
    margin: 2px 0 0 0;
    background: white;
    box-shadow: none;
    border: 1px;
    color: #666666;
    padding: 7.5px 10px 7.5px 8px;
    border-left: solid 1px #ccc;

}

#custom-search-input button:hover{
    border: 0;
    box-shadow: none;
    border-left: solid 1px #ccc;

}

#custom-search-input .glyphicon-search{
    font-size: 23px;

}

#ctrMapBtn{
  position:absolute;
  top:70px;
  right:10px;
  color: white;
  background-color: #006699;
  border: 4px solid #f8c460
}

.boxy{
    text-align: center;
    height: 800px;
    width: 800px;
}

.front{
    z-index: 2;
}

.floatburger{
    padding: 10px;
}

.front2{
    z-index: 1;
}

#map {
    position:absolute; top:0; left:0; bottom:0; width:100%;
    z-index:-1;
}

/* CSS used here will be applied after bootstrap.css */
/*
 * Slidebar (add to your bootstrap)
 */

body{
  overflow-x: hidden;
  background-color: #dddddd;


}

.slidebar-form {
  padding: 7px 15px 13px 15px;

}
.slidebar-nav {
  left: 250px;
  list-style: none;
  height: calc(100vh - 50px);
  margin: 0;
  margin-left: -250px;
  overflow-y: auto;
  padding: 0;
  position: fixed;
  top: 50px;
  width: 250px;            /*This is how much of the sidebar shows AFTER clicking the hamburger menu*/
  
  z-index: 1000;
  -webkit-transition: all 0.5s ease;
  -moz-transition: all 0.5s ease;
  -o-transition: all 0.5s ease;
  transition: all 0.5s ease;


}
#wrapper.toggled .slidebar-nav { /*This is how much of the sidebar shows BEFORE clicking the hamburger menu*/
    width: 0px;
}

.slidebar-nav ul {
  float: none;
  width: 100%;
}
.slidebar-nav ul:not {
  display: block;
}
.slidebar-nav li {
  float: none;
  display: block;
}
.slidebar-nav li a {
  padding-top: 12px;
  padding-bottom: 12px;
}
.slidebar-nav .open .dropdown-menu {
  position: static;
  float: none;
  width: auto;
  margin: 0;
  padding: 5px;
  background-color: transparent;
  border: 0;
  -webkit-box-shadow: none;
  box-shadow: none;
}

/*This should be changed to blue color*/
/*Save this green color rgb(35, 160, 0), put blue color #006699*/

.slidebar-nav .open .dropdown-menu > li > a {
  padding: 5px 15px 5px 25px;
  background-color: #006699;
  width: 225px;
  white-space: normal;
}

.slidebar-nav .navbar-brand {
  width: 100%;
  font-size: 25px;
  font-weight: bolder;
}

.slidebar-nav .open > a > b.caret {
  border-top: none;
  border-bottom: 4px solid;
  
}
.slidebar-nav .navbar-nav {
  margin: 0;

}

#wrapper {
    padding-left: 100;
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;

}

#wrapper.toggled {
    padding-left: 150px;
}

#page-wrapper6 {
    width: 100%;
    position: absolute;
    padding: 15px;
  top: 50px;
}

#wrapper.toggled #page-wrapper6 {
    position: absolute;
    margin-right: -250px;
}

@media(min-width: 768px){
  .slidebar-nav{
    width: 250px;
  }
}

.slidebar-toggle {
  position: relative;
  float: left;
  padding: 9px 10px;
  margin-top: 8px;
  margin-left: 15px;
  margin-bottom: 8px;
  background-color: transparent;
  background-image: none;
  background-color: white;
  border: 1px solid transparent;
  border-radius: 4px;

}
.slidebar-toggle:focus {
  background-color: white;
  outline: 0;
}
.slidebar-toggle .icon-bar {
  display: block;
  width: 22px;
  height: 2px;
  border-radius: 1px;

}
.slidebar-toggle .icon-bar + .icon-bar {
  margin-top: 4px;

}
.navbar-default .slidebar-toggle {
  border-color: #ddd;

}
.navbar-default .slidebar-toggle:hover,
.navbar-default .slidebar-toggle:focus {
  background-color: #ddd;
}
.navbar-default .slidebar-toggle .icon-bar {
  background-color: #888;
}

/*
 * White navbar style
 */

#navbar-white{
    width: 100%;
    border: 6px;
    border-bottom: solid;
    border-color: #f8c460;
   /* border-radius: 0; */
    background-color:#006699;
}

#navbar-white.navbar-default { /* #efffff - #ffffff */
    font-size: 20px;
    /* background-color: rgba(255, 255, 255, 1);
    background: -webkit-linear-gradient(top, rgba(239, 255, 255, 1) 0%, rgba(255, 255, 255, 1)  100%);
    background: linear-gradient(to bottom, rgba(239, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 100%);
    */
    
}

#navbar-white.navbar-default .navbar-nav>li>a:hover{
    color:#889911;
}
#navbar-white.navbar-default .navbar-nav>li>a:focus{
    color:#889911;
    background-color:#006699;
}
#navbar-white.navbar-default .navbar-nav>li>ul>li>a:hover{
    color:#006699;
    background-color:gold; /*Hovering with gold color*/
}
#navbar-white.navbar-default .navbar-nav>li>ul>li>a:focus{
    color:#889911;
    background-color:#006699;
}
#navbar-white.navbar-default .navbar-nav>.active>a{
  color:#889911;
  background-color:#006699;
}
#navbar-white.navbar-default .navbar-nav>.active>a:hover{
  color:white;
}
#navbar-white.navbar-default .navbar-nav>.active>a:focus {
    color: #f8c460;
    background-color: rgba(255, 255, 255, 1);
    background: -webkit-linear-gradient(top, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 100%);
    background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 100%);

}
/*Hamburger Lower Sidebar-Below Menu*/
#sidebar-white, #column-white, #dashboard-white, #slidebar-white {
  background-color: #006699;
}
/*Hamburger Menu Border*/
#navbar-white.navbar-default .navbar-toggle,
#navbar-white.navbar-default .slidebar-toggle {
    border-color: #f8c460;
    background-color:#006699;
    border-width: 5px;

}
/*Hamburger Menu Lines*/
#navbar-white.navbar-default .navbar-toggle .icon-bar,
#navbar-white.navbar-default .navbar-toggle:hover .icon-bar,
#navbar-white.navbar-default .navbar-toggle:focus .icon-bar,
#navbar-white.navbar-default .slidebar-toggle .icon-bar,
#navbar-white.navbar-default .slidebar-toggle:hover .icon-bar,
#navbar-white.navbar-default .slidebar-toggle:focus .icon-bar {
    background-color: #f8c460;

}
/*Hamburger Menu On Mouse Hover*/
#navbar-white.navbar-default .navbar-toggle:hover,
#navbar-white.navbar-default .navbar-toggle:focus,
#navbar-white.navbar-default .slidebar-toggle:hover,
#navbar-white.navbar-default .slidebar-toggle:focus {
    background-color: #006699;
    border-color:white;

}

/*Hamburger Font DropDown Menu*/
#navbar-white.navbar-default .navbar-nav>li>a,
#navbar-white.navbar-default .navbar-nav>li>ul>li>a,
#navbar-white.navbar-default .navbar-brand {
    color: #f8c460;
}



/* The Modal (background) */
.modal2 {
    display: none; /* Hidden by default */
    position: absolute; /* Stay in place */
    z-index: 1; /* Sit on top */
    padding-top: 100px; /* Location of the box */
    left: 10%;
    top: 0;
    width: 75%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    /*background-color: rgb(0,0,0); /* Fallback color */
    /*background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
    /*background-color:transparent; */

}

/* Modal Content */
.modal-content2 {
    position: relative;
    background-color: #006699;
    margin: auto;
    padding: 0;
    border: 14px solid #f8c460;
    border-radius: 25px;

    width: 80%;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
    -webkit-animation-name: animatetop;
    -webkit-animation-duration: 0.4s;
    animation-name: animatetop;
    animation-duration: 0.4s
}

/* Add Animation */
@-webkit-keyframes animatetop {
    from {top:-300px; opacity:0}
    to {top:0; opacity:1}
}

@keyframes animatetop {
    from {top:-300px; opacity:0}
    to {top:0; opacity:1}
}

/* The Close Button */
.close2{
  position: absolute;
  top: 0;
  right: 0.8em; /*horizontal location of entire ribbon*/
  z-index: 1;
  color: #eee;
  font-size: 3em;  /*size of close ribbon*/
  font-weight: bold;
  cursor: default;
  width: 1.03em;  /*horizontal location of close 'x' */
  line-height: 0em; /*vertical location of close 'x' */
  -webkit-transition: line-height 0.5s;
  transition: line-height 0.5s;
}
.close2:after {
  content: "";
  font-size: 0.5em;
  position: absolute;
  height: 4.3em;   /*length of ribbon/height*/
  border: 1.5em solid #F44336;
  z-index: -1;
  top: -1.5em; /* how far ribbon extends above modal border*/
  border-top-width: 1.5em;
  border-bottom-color: transparent;
  right: 0;
  -webkit-transition: height 0.5s;
  transition: height 0.5s;
}
.close2:before {
  content: "";
  font-size: 0.4em;   /*ribbon shadow size*/
  position: absolute;
  border-style: solid;
  border-color: transparent transparent #B71C1C transparent;
  top: -1.9em;  /*vertical location of ribbon shadow*/
  right: 3.6em; /*horizontal location of ribbon shadow*/
  border-width: 0 0 1.1em 0.7em;  /*ribbon shadow design*/
  z-index: -1;
}
.close2:hover:after{
  border: 1.5em solid #EF5350;
  border-bottom-color: transparent;
  height: 5em;   /*length of ribbon when user hovers*/
  -webkit-transition: height 0.5s;
  transition: height 0.5s;
}
.close2:hover{
  line-height: 0.9em;
  color: #333;
  -webkit-transition: line-height 0.5s;
  transition: line-height 0.5s;
}


.modal-header2 {
    padding: 10px;
    background-color: #006699;
    color: white;
    border-radius: 0px 10px 0px 0px

}

.modal-header2 img {
    border-top: 0px
    float:left;
    width:100px;
    height:100px;
    padding: 10px
    border-radius: 15px;
}

.modal-title2{
    padding: 50px 50px;
    color:#f8c460;
    text-align: center;
    font-size: 25px;
    font-weight: bolder;
    overflow-y: auto;

}

.modal-image2,
.modal-title2{
  display: inline-block;
  vertical-align: bottom;
}

.modal-body2 {
    padding: 10px 16px;
    color:#f8c460;

    font-size: 30px;
    overflow-y: auto;

}

.autoModal.modal .modal-body{
    max-height: 100%;
}

h4{
    padding: 1px;

    text-align: center;
}
h5{
    padding: 1px;
    text-align: left;
}

p2{
    padding: 1px;
    font-size: 20px;
    text-align: left;
}

p{
    padding: 1px;
    font-size: 20px;
}

#mainContainer{
    height: 100%;
}

#searchDiv{
    width: 25%;
}

.marker {
    background-size: cover;
    width: 50px;
    height: 50px;
    border-radius: 50%;
    cursor: pointer;
}
.breaks{
    word-wrap: break-word;
}
.modModal{
    max-width: 600px;
    overflow-y: auto;
    border-radius:25px;
    border:10px solid #f8c460;
    padding-left:15px;
    padding-right:10px;
    background-color:#006699;
    color:white;
}
.popup-image{
    width:280px;
    height:158px;
    float:left;
    margin:5px 10px 10px 0px;
}
.popup-desc{
    margin-top:10px;
    float:left;
}

